Added new filters and drawables for the app

--- a/app/src/main/res/drawable/ic_chevron_left.xml
+++ b/app/src/main/res/drawable/ic_chevron_left.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M15.41,7.41L14,6l-6,6 6,6 1.41,-1.41L10.83,12z" />
+<vector android:height="64dp" android:viewportHeight="612"
+    android:viewportWidth="612" android:width="64dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="M306,0C136.992,0 0,136.992 0,306c0,168.988 136.992,306 306,306s306,-137.012 306,-306C612,136.992 475.008,0 306,0zM439.875,325.125H237.418l78.813,78.814c7.479,7.478 7.479,19.584 0,27.042c-7.478,7.479 -19.583,7.479 -27.042,0l-108.19,-108.189c-4.571,-4.571 -6.005,-10.863 -4.954,-16.792c-1.052,-5.929 0.383,-12.221 4.973,-16.811l108.19,-108.19c7.478,-7.478 19.584,-7.478 27.043,0c7.478,7.478 7.478,19.584 0,27.043l-78.833,78.833h202.457c10.557,0 19.125,8.568 19.125,19.125C459,316.557 450.432,325.125 439.875,325.125z"/>
 </vector>
