--- a/app/src/main/res/layout/filter_item.xml
+++ b/app/src/main/res/layout/filter_item.xml
@@ -5,11 +5,14 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <TextView
+    <Button
         android:id="@+id/filter_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="8dp"
+        android:background="@drawable/btn_shape_round"
+        android:padding="8dp"
         android:text="@string/create"
         android:textAlignment="center" />
 </LinearLayout>
